improvement to code architecture - abstract batch execution and non batch execution to gether and make search code clearer